--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,10 @@
   <body class="body">
     <div class="container">
       <nav class="navbar navbar-default" role="navigation">
-        <a class="brand" href="#">moodtube</a>
+        <a class="brand" href="/">moodtube</a>
         <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="/graph">Graph</a></li>
+          <li><a href="/db">Database</a></li>
         </ul>
       </nav>
 
