--- a/templates/test.html
+++ b/templates/test.html
@@ -12,7 +12,7 @@
         <a class="brand" href="/">moodtube</a>
         <ul class="nav">
           <li><a href="/graph">Graph</a></li>
-          <li><a href="/db">Databse</a></li>
+          <li><a href="/db">Database</a></li>
         </ul>
       </nav>
     <h1>My SONGS!</h1>
